# tasalsul

./: LICENSE  README.md  bump.sh
.github/workflows/: release.yml
src/tasalsul/: engine.py
tasalsul-clean/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
tasalsul-clean/.github/workflows/: ci.yml
tasalsul-clean/src/tasalsul/: __init__.py  cli.py
tests/: test_tasalsul.py
